--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 # Main Makefile for DOSBox
 
 EXTRA_DIST = autogen.sh
-SOURCES = p_sprint.c ftruncate.c
+SOURCES = p_sprint.c
 SUBDIRS = src include docs visualc_net
